--- a/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/Index.cshtml
+++ b/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/Index.cshtml
@@ -3,10 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
+    <link href="~/Index.css" rel="stylesheet" />
+
+    <title>Document</title>
 </head>
 <body>
-    <h1>Üdv</h1>
-    <a href="/Home/AddPlayer">Játékos hozzáadása</a>
+    <header>
+        <a href="#"><img src="logo.png" class="logo"></a>
+        <div class="toggleMenu" onclick="menuToggle();"></div>
+        <ul class="navigation">
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="#">Add</a></li>
+            <li><a href="#">Data</a></li>
+            <li><a href="/history.html">History</a></li>
+        </ul>
+    </header>
+    <div class="container">
+
+        <div class="section">
+            <a href="https://www.fifa.com/"><img src="FIFA-logo.jpg" alt=""></a>
+        </div>
+
+        <div class="section">
+            <a href="https://www.uefa.com/"><img src="uefa.jpg" alt=""></a>
+        </div>
+
+        <div class="section">
+            <a href="https://www.eredmenyek.com/"><img src="other.png" alt=""></a>
+        </div>
+
+        <div class="section">
+            <a href="https://trollfoci.blogstar.hu/"><img src="profile_crop_400x400.jpg" alt=""></a>
+        </div>
+
+
+    </div>
+
+
 </body>
 </html>
