--- a/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/Index.cshtml
+++ b/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/Index.cshtml
@@ -12,8 +12,8 @@
         <a href="#"><img src="logo.png" class="logo"></a>
         <div class="toggleMenu" onclick="menuToggle();"></div>
         <ul class="navigation">
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="#">Add</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/Home/Add">Add</a></li>
             <li><a href="#">Data</a></li>
             <li><a href="/history.html">History</a></li>
         </ul>
