--- a/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/List.cshtml
+++ b/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/List.cshtml
@@ -5,16 +5,30 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>list</title>
+        <link rel="stylesheet" href="data.css" />
+        <title>Data picker</title>
     </head>
     <body>
-        @foreach (var item in Model)
-        {
-            <p>Játékos Neve:</p><p>@item.PlayerName</p><br />
-            <p>Nemzetiség:</p><p>@item.Nationality</p><br />
-            <p>Rating: </p><p>@item.Rating</p><br />
-            <p>WeakFoot: </p><p>@item.WeakFoot</p><br />
-        }
+        <div class="container">
+            <div class="item item1">
+                <a href="/Home/ListLeagues"><h3>Leagues</h3></a>
+
+            </div>
+
+            <div class="item item2">
+                <a href=""><h3>Teams</h3></a>
+
+            </div>
+
+
+            <div class="item item3">
+                <a href=""><h3>Players</h3></a>
+
+            </div>
+
+
+
+        </div>
     </body>
 </html>
 
