css tovább csinálva, Listázó és Editelő metódusok készen

--- a/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/Index.cshtml
+++ b/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/Index.cshtml
@@ -14,8 +14,8 @@
         <ul class="navigation">
             <li><a href="/">Home</a></li>
             <li><a href="/Home/Add">Add</a></li>
-            <li><a href="#">Data</a></li>
-            <li><a href="/history.html">History</a></li>
+            <li><a href="/Home/Data">Data</a></li>
+            <li><a href="/Home/GenerateData">Generate Data</a></li>
         </ul>
     </header>
     <div class="container">
