--- a/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/ListTeams.cshtml
+++ b/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/ListTeams.cshtml
@@ -8,6 +8,7 @@
 
 <p>
     <a href="/Home/ListLeague">Back to the Leagues</a>
+    <a href="/">Back To the Home Page</a>
 </p>
 <table class="table">
     <thead>
@@ -40,6 +41,10 @@
                 <a href="/Home/AddPlayer?id=@item.TeamID">Add player</a>
                 <br />  
                 <a href="/Home/ListPlayers?id=@item.TeamID">List Players</a>
+                <br />
+                <a href="/Home/UpdateTeam?id=@item.TeamID">Update Team</a>
+                <br />
+                
 
             </td>
         </tr>
