--- a/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/ListLeague.cshtml
+++ b/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/ListLeague.cshtml
@@ -43,5 +43,7 @@
 }
 
     <a href="/Home/AddLeague">Add a new league</a>
+    <br />  
+    <a href="/">Back to the home page</a>
     </tbody>
 </table>
