--- a/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/ListPlayers.cshtml
+++ b/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/ListPlayers.cshtml
@@ -27,27 +27,32 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.PlayerName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nationality)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Rating)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.WeakFoot)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TeamID)
-            </td>
-            <td>
-               
-            </td>
-        </tr>
-}          <a href="/">Back to the home page</a>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PlayerName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Nationality)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Rating)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.WeakFoot)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TeamID)
+                </td>
+                <td>
+                    <a href="/Home/UpdatePlayer?id=@item.IgazolasSzama">Update Players</a>
+                </td>
+            </tr>
+        }
+        <a href="/">Back to the home page</a>
+        <br />  
+        <a href="/Home/ListLeague">Back to the leagues</a>
+       
     </tbody>
 </table>
