Non Crud metódusok elkezdve, Stat modell hozzáadva

--- a/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/Index.cshtml
+++ b/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/Index.cshtml
@@ -15,7 +15,9 @@
             <li><a href="/">Home</a></li>
             <li><a href="/Home/Add">Add</a></li>
             <li><a href="/Home/Data">Data</a></li>
+            <li><a href="/Home/Stat">Stat</a></li>
             <li><a href="/Home/GenerateData">Generate Data</a></li>
+
         </ul>
     </header>
     <div class="container">
