--- a/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/ListPlayers.cshtml
+++ b/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/ListPlayers.cshtml
@@ -1,58 +1,63 @@
 ﻿@model IEnumerable<Models.Player>
-
+    <head>
+        <link href="~/ListPlayers.css" rel="stylesheet" />
+    </head>
 <h1>ListPlayers</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.PlayerName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Nationality)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Rating)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.WeakFoot)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TeamID)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
+<div class="container">
+
+    <table class="table">
+        <thead>
             <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.PlayerName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Nationality)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Rating)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.WeakFoot)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.TeamID)
-                </td>
-                <td>
-                    <a href="/Home/UpdatePlayer?id=@item.IgazolasSzama">Update Players</a>
-                </td>
+                <th>
+                    @Html.DisplayNameFor(model => model.PlayerName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Nationality)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Rating)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.WeakFoot)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.TeamID)
+                </th>
+                <th></th>
             </tr>
-        }
-        <a href="/">Back to the home page</a>
-        <br />  
-        <a href="/Home/ListLeague">Back to the leagues</a>
-       
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.PlayerName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Nationality)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Rating)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.WeakFoot)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.TeamID)
+                    </td>
+                    <td>
+                        <a href="/Home/UpdatePlayer?id=@item.IgazolasSzama">Update Players</a>
+                    </td>
+                </tr>
+            }
+            <a href="/">Back to the home page</a>
+            <br />
+            <a href="/Home/ListLeague">Back to the leagues</a>
+
+        </tbody>
+    </table>
+</div>
