--- a/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/UpdatePlayer.cshtml
+++ b/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/UpdatePlayer.cshtml
@@ -5,28 +5,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="~/ADD.css" rel="stylesheet" />
     <title>Update Player</title>
 </head>
 <body>
-    <form action="/Home/UpdatePlayer" method="post">
-        Játékos neve:
-        <input type="text" name="PlayerName" value="@Model.PlayerName" />
-        <br />
-        Nemzetiség:
-        <input type="text" name="Nationality"  value="@Model.Nationality" />
-        <br />
-        Rating:
-        <input type="number" name="Rating"  value="@Model.Rating"/>
-        <br />
-        WeakFoot:
-        <input type="number" name="WeakFoot" value="@Model.WeakFoot" />
-        <br />
-        <input type="hidden" name="TeamID" value="@Model.TeamID" />
-        <input type="hidden" name="IgazolasSzama" value="@Model.IgazolasSzama" />
 
-        <input type="submit" value="Küldés" />
+    <div class="container">
+
+        <h2>Player Update</h2>
+
+        <div class="form">
+
+            <form action="/Home/UpdatePlayer" method="post">
+                Játékos neve:
+                <input type="text" name="PlayerName" value="@Model.PlayerName" />
+                <br />
+                Nemzetiség:
+                <input type="text" name="Nationality" value="@Model.Nationality" />
+                <br />
+                Rating:
+                <input type="number" name="Rating" value="@Model.Rating" />
+                <br />
+                WeakFoot:
+                <input type="number" name="WeakFoot" value="@Model.WeakFoot" />
+                <br />
+                <input type="hidden" name="TeamID" value="@Model.TeamID" />
+                <input type="hidden" name="IgazolasSzama" value="@Model.IgazolasSzama" />
+
+                <input type="submit" value="Küldés" />
 
 
-    </form>
+
+
+            </form>
+
+
+        </div>
+    </div>
 </body>
 </html>
