--- a/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/UpdateTeam.cshtml
+++ b/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/UpdateTeam.cshtml
@@ -16,7 +16,7 @@
 
                 <input type="hidden" name="TeamID" value="@Model.TeamID" />
                 <br />
-                CITY:
+                <p>CITY:</p>
                 <input type="text" name="City" value="@Model.City" />
                 <br />
                 <input type="hidden" name="LeagueID" value="@Model.LeagueID" />
