CSS KÉSZ, STAT model átgondolva, megcsinálva

--- a/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/Add.cshtml
+++ b/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/Add.cshtml
@@ -1,15 +1,21 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <link href="~/Choose.css" rel="stylesheet" />
     <title>Choose</title>
 </head>
 <body>
-    
-    
-    <a href="/Home/AddLeague">Add League</a>
-    <br />
-    <a href="/Home/ListLeague">List Leagues</a>
+    <a href="/">Back to the home page</a>
+    <div class="container">
+        <h2>What do you want?</h2>
+        <div class="item" >
+            <a href="/Home/AddLeague">Add League</a>
+        </div>
 
+        <div class="item">
+            <a href="/Home/ListLeague">List Leagues</a>
+        </div>
+    </div>
 
 </body>
 </html>
