--- a/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/ListLeague.cshtml
+++ b/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/ListLeague.cshtml
@@ -3,52 +3,54 @@
 @{
     ViewData["Title"] = "ListLeagues";
 }
+<html>
 <head>
     <link href="~/ListPlayers.css" rel="stylesheet" />
+    <title>LIST LEAGUES</title>
 </head>
-<h1>ListLeagues</h1>
+<body>
+    <h1>ListLeagues</h1>
+    <a href="/">Back to the home page</a>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<div class="container">
-    <table class="table">
-        <thead>
-            <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.LeagueID)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Country)
-                </th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model)
-            {
+    <div class="container">
+        <table class="table">
+            <thead>
                 <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.LeagueID)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Country)
-                    </td>
-                    <td>
-                        <a href="/Home/AddTeam?id=@item.LeagueID">Add Team</a>
-                        <br />
-                        <a href="/Home/LeagueTeamList?id=@item.LeagueID">List Teams from this League</a>
-                        <br />
-                        <a href="/Home/UpdateLeague?id=@item.LeagueID">Update League</a>
-
-
-                    </td>
+                    <th>
+                        @Html.DisplayNameFor(model => model.LeagueID)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Country)
+                    </th>
+                    <th></th>
                 </tr>
-            }
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.LeagueID)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Country)
+                        </td>
+                        <td>
+                            <a href="/Home/AddTeam?id=@item.LeagueID">Add Team</a>
+                            <br />
+                            <a href="/Home/LeagueTeamList?id=@item.LeagueID">List Teams from this League</a>
+                            <br />
+                            <a href="/Home/UpdateLeague?id=@item.LeagueID">Update League</a>
 
-            <a href="/Home/AddLeague">Add a new league</a>
-            <br />
-            <a href="/">Back to the home page</a>
-        </tbody>
-    </table>
-</div>
+
+                        </td>
+                    </tr>
+                }
+
+                <a href="/Home/AddLeague">Add a new league</a>
+            </tbody>
+        </table>
+    </div>
+
+</body>
+</html>
