--- a/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/ListTeams.cshtml
+++ b/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/ListTeams.cshtml
@@ -6,13 +6,10 @@
 <head>
     <link href="~/ListPlayers.css" rel="stylesheet" />
 </head>
-
-<h1>ListTeams</h1>
-
-<p>
-    <a href="/Home/ListLeague">Back to the Leagues</a>
-    <a href="/">Back To the Home Page</a>
-</p>
+<h1>Teams in our database</h1>
+<a href="/Home/ListLeague">Back to the Leagues</a>
+<br />  
+<a href="/">Back To the Home Page</a>
 <div class="container">
     <table class="table">
         <thead>
