--- a/ISGUOH_FELEVES/ISGUOH_FELEVES/wwwroot/ListPlayers.css
+++ b/ISGUOH_FELEVES/ISGUOH_FELEVES/wwwroot/ListPlayers.css
@@ -55,3 +55,22 @@ tbody td {
         background-color: rgba(255, 255, 255, 0.2);
         z-index: -1;
     }
+
+
+    h1{
+      padding-top:25px;
+      text-align:center;
+      color:white;
+        
+    }
+
+a:hover {
+    color: #72549A;
+}
+a {
+    text-shadow: 2px 2px black;
+    text-decoration: none;
+    font-size: 25px;
+    color: white;
+}
+
