Cascade delete készen

--- a/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/ListLeague.cshtml
+++ b/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/ListLeague.cshtml
@@ -41,6 +41,8 @@
                             <a href="/Home/LeagueTeamList?id=@item.LeagueID">List Teams from this League</a>
                             <br />
                             <a href="/Home/UpdateLeague?id=@item.LeagueID">Update League</a>
+                            <br />  
+                            <a href="/Home/DeleteLeague?id=@item.LeagueID">Delete League</a>
 
 
                         </td>
