--- a/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/ListPlayers.cshtml
+++ b/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/ListPlayers.cshtml
@@ -50,6 +50,7 @@
                     </td>
                     <td>
                         <a href="/Home/UpdatePlayer?id=@item.IgazolasSzama">Update Players</a>
+                        <a href="/Home/DeletePlayer">Delete Player</a>
                     </td>
                 </tr>
             }
