--- a/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/AddPlayer.cshtml
+++ b/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/AddPlayer.cshtml
@@ -8,6 +8,7 @@
     <title>Index</title>
 </head>
 <body>
+    <a href="/">Back to the home page</a>
     <div class="container">
 
         <div class="form">
@@ -26,6 +27,6 @@
 
             </form>
         </div>
-     </div>
+    </div>
 </body>
 </html>
