--- a/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/AddTeam.cshtml
+++ b/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/AddTeam.cshtml
@@ -6,8 +6,9 @@
     <title>Add Team</title>
 </head>
 <body>
+    <a href="/">Back to the home page</a>
     <div class="container">
-        <h2>Adjon hozzá egy ligát, a liga az adatbázisban csak EGYSZER szerepelhet!</h2>
+        <h2>Adjon hozzá egy csapatot, a csapat az adatbázisban csak EGYSZER szerepelhet!</h2>
         <div class="form">
             <form action="/Home/AddTeam" method="post">
 
