--- a/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/Index.cshtml
+++ b/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
             <li><a href="/Home/Add">Add</a></li>
             <li><a href="/Home/Data">Data</a></li>
             <li><a href="/Home/Stat">Stat</a></li>
-            <li><a href="/Home/GenerateData">Generate Data</a></li>
+            <li><a href="/Home/GenerateData" onclick="alert('Database filled with samples')">Generate Data</a></li>
 
         </ul>
     </header>
