--- a/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/ListPlayers.cshtml
+++ b/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/ListPlayers.cshtml
@@ -2,7 +2,7 @@
 <head>
     <link href="~/ListPlayers.css" rel="stylesheet" />
 </head>
-<h1>ListPlayers</h1>
+<h1>List Players</h1>
 <a href="/">Back to the home page</a>
 <br />  
 <a href="/Home/ListLeague">Back to the leagues</a>
@@ -50,7 +50,7 @@
                     </td>
                     <td>
                         <a href="/Home/UpdatePlayer?id=@item.IgazolasSzama">Update Players</a>
-                        <a href="/Home/DeletePlayer">Delete Player</a>
+                        <a href="/Home/DeletePlayer?id=@item.IgazolasSzama">Delete Player</a>
                     </td>
                 </tr>
             }
