--- a/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/ListTeams.cshtml
+++ b/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/ListTeams.cshtml
@@ -46,7 +46,7 @@
                         <br />
                         <a href="/Home/UpdateTeam?id=@item.TeamID">Update Team</a>
                         <br />
-                        <a href="/Home/DeleteTeam">Delete Team</a>
+                        <a href="/Home/DeleteTeam?id=@item.TeamID">Delete Team</a>
 
 
                     </td>
