--- a/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/AddLeague.cshtml
+++ b/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/AddLeague.cshtml
@@ -6,7 +6,7 @@
 
 </head>
 <body>
-    
+    <a href="/">Back to the home page</a>
     <div class="container">
 
         <h2>Adjon hozzá egy ligát, a liga az adatbázisban csak EGYSZER szerepelhet!</h2>
