--- a/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/UpdateLeague.cshtml
+++ b/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/UpdateLeague.cshtml
@@ -7,10 +7,10 @@
     <title>Edit League</title>
 </head>
 <body>
-
+    <a href="/">Back to the home page</a>
 
     <div class="container">
-        
+
         <h2>League Update:</h2>
         <div class="form">
             <form action="/Home/UpdateLeague" method="post">
