--- a/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/UpdatePlayer.cshtml
+++ b/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/UpdatePlayer.cshtml
@@ -9,7 +9,7 @@
     <title>Update Player</title>
 </head>
 <body>
-
+    <a href="/">Back to the home page</a>
     <div class="container">
 
         <h2>Player Update</h2>
