--- a/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/UpdateTeam.cshtml
+++ b/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/UpdateTeam.cshtml
@@ -7,6 +7,7 @@
     <title>Update Team</title>
 </head>
 <body>
+    <a href="/">Back to the home page</a>
     <div class="container">
 
         <h2>Team Update</h2>
