--- a/ISGUOH_FELEVES/ISGUOH_FELEVES/wwwroot/ADD.css
+++ b/ISGUOH_FELEVES/ISGUOH_FELEVES/wwwroot/ADD.css
@@ -30,12 +30,23 @@ body {
 .container h2{
 
     color:white;
-    font-size:16px
+    font-size:18px
 }
 
 .form{
 
     justify-content:center;
+}
+
+a:hover {
+    color: #72549A;
+}
+
+a {
+    text-shadow: 2px 2px black;
+    text-decoration: none;
+    font-size: 25px;
+    color: white;
 }
 
 
