--- a/ISGUOH_FELEVES/ISGUOH_FELEVES/wwwroot/Choose.css
+++ b/ISGUOH_FELEVES/ISGUOH_FELEVES/wwwroot/Choose.css
@@ -38,20 +38,27 @@ body {
 
     text-decoration: none;
     color:white;
-    font-size:18px;
+    font-size:28px;
   
 
+}
+
+a:hover {
+    color: #72549A;
+}
+
+a {
+    text-shadow: 2px 2px black;
+    text-decoration: none;
+    font-size: 25px;
+    color: white;
 }
 
 .container h2 {
    
     color: white;
-    font-size: 40px
+    font-size: 50px
     
 }
 
-a{
-    text-decoration:none;
-    font-size:25px;
-    color:white;
-}
+
