Stat model kiegészítve Join Lekérdezéssel

--- a/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/AddLeague.cshtml
+++ b/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/AddLeague.cshtml
@@ -14,7 +14,7 @@
         <div class="form">
             <form action="/Home/AddLeague" method="post">
                 <p>League Name</p>
-                <input type="text" name="LeagueID" />
+                <input type="text" name="LeagueID" required />
                 <p>Country</p>
                 <input type="text" name="Country" />
                 <input type="submit" value="ADD" />
