--- a/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/AddPlayer.cshtml
+++ b/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/AddPlayer.cshtml
@@ -14,7 +14,7 @@
         <div class="form">
             <form action="/Home/AddPlayer" method="post">
                 <p>Játékos neve:</p>
-                <input type="text" name="PlayerName" />
+                <input type="text" name="PlayerName"  required/>
                 <p>Nemzetiség:</p>
                 <input type="text" name="Nationality" />
                 <p>Rating:</p>
