--- a/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/Stat.cshtml
+++ b/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/Stat.cshtml
@@ -27,6 +27,9 @@
                     <th>
                         League Count
                     </th>
+                    <th>
+                        Top Rated League
+                    </th>
 
                 </tr>
             </thead>
@@ -35,6 +38,8 @@
                 <td> @Model.MaxRatingJatekos</td>
                 <td> @Model.JatekosokSzama</td>
                 <td> @Model.LeagueCount</td>
+                <td> @Model.AvgRatingLeaguename</td>
+
             </tr>
         </table>
     </div>
