Teszteles elkezdve(crudok készen)

--- a/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/Stat.cshtml
+++ b/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/Stat.cshtml
@@ -28,7 +28,7 @@
                         League Count
                     </th>
                     <th>
-                        Top Rated League
+                        Top Rated Team
                     </th>
 
                 </tr>
