Magyarázat elhelyezve + Generate Data teljesen fixálva

--- a/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/Data.cshtml
+++ b/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/Data.cshtml
@@ -7,6 +7,8 @@
     <title>Data picker</title>
 </head>
 <body>
+    <h2>Hint : Ha pl. itt törölsz, módosítasz egy csapatot, akkor átirányít egy olyan List felületre, ahol csak az adott ligához tartozó csapatok találhatóak!(Ugyenez igaz mindenre!)</h2>
+    <h2>Ha másképp szeretnél listázni -> Add -> List Leagues</h2>
     <div class="container">
         
         <div class="item item1" onclick="location.href='/Home/ListLeague';">
