--- a/ISGUOH_FELEVES/ISGUOH_FELEVES/wwwroot/Data.css
+++ b/ISGUOH_FELEVES/ISGUOH_FELEVES/wwwroot/Data.css
@@ -87,3 +87,11 @@ body {
 .item :hover .text {
     visibility: visible;
 }
+
+
+h2 {
+
+    position:center;
+    color:white;
+    font-size:18px;
+}
