CSHTML meta taggel kiegészítve

--- a/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/AddLeague.cshtml
+++ b/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/AddLeague.cshtml
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add League</title>
     <link href="~/ADD.css" rel="stylesheet" />
 
