--- a/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/Add.cshtml
+++ b/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/Add.cshtml
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="~/Choose.css" rel="stylesheet" />
     <title>Choose</title>
 </head>
