--- a/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/ListPlayers.cshtml
+++ b/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/ListPlayers.cshtml
@@ -1,5 +1,6 @@
 ﻿@model IEnumerable<Models.Player>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="~/ListPlayers.css" rel="stylesheet" />
 </head>
 <h1>List Players</h1>
