--- a/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/ListTeams.cshtml
+++ b/ISGUOH_FELEVES/ISGUOH_FELEVES/Views/Home/ListTeams.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "ListTeams";
 }
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="~/ListPlayers.css" rel="stylesheet" />
 </head>
 <h1>Teams in our database</h1>
