--- a/ISGUOH_FELEVES/ISGUOH_FELEVES/wwwroot/Choose.css
+++ b/ISGUOH_FELEVES/ISGUOH_FELEVES/wwwroot/Choose.css
@@ -13,8 +13,8 @@ body {
 }
 
 .item {
-    width: 450px;
-    height: 230px;
+    max-width: 450px;
+    max-height: 230px;
     border: 3px solid white;
     border-radius: 40px;
     margin: 10px;
