--- a/ISGUOH_FELEVES/ISGUOH_FELEVES/wwwroot/Data.css
+++ b/ISGUOH_FELEVES/ISGUOH_FELEVES/wwwroot/Data.css
@@ -14,8 +14,8 @@ body {
 }
 
 .item {
-    width: 450px;
-    height: 230px;
+    max-width: 450px;
+    max-height: 230px;
     border: 3px solid white;
     box-shadow: 0px 5px 30px 0px rgba(0,0,0,.05);
     border-radius: 40px;
