--- a/ISGUOH_FELEVES/ApiConsumer/TeamWindow.xaml
+++ b/ISGUOH_FELEVES/ApiConsumer/TeamWindow.xaml
@@ -12,9 +12,9 @@
         <Button Click="AddTeam" Content="Add League" Margin="27,512,830,0" BorderBrush="ForestGreen" BorderThickness="3" Height="34" VerticalAlignment="Top"/>
         <Button  Content="Edit League" HorizontalAlignment="Left" Margin="128,510,0,0" Width="82" BorderBrush="Yellow" BorderThickness="3" Height="34" VerticalAlignment="Top" />
         <Button  Content="Delete League" HorizontalAlignment="Left" Margin="235,510,0,0" Width="90" BorderBrush="Red" BorderThickness="3" Height="36" VerticalAlignment="Top" />
-        <Button   Content="List Teams" Margin="812,505,0,0" Height="34" VerticalAlignment="Top" HorizontalAlignment="Left" Width="78"/>
+        <Button  Content="List Teams" Margin="812,505,0,0" Height="34" VerticalAlignment="Top" HorizontalAlignment="Left" Width="78"/>
         <Label Content="All Teams" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Height="32" Width="207" FontSize="17"/>
-        <Button  Content="Refresh" Margin="824,26,0,0" VerticalAlignment="Top" Height="24" HorizontalAlignment="Left" Width="54"/>
+        <Button Click="Refresh" Content="Refresh" Margin="824,26,0,0" VerticalAlignment="Top" Height="24" HorizontalAlignment="Left" Width="54"/>
 
 
 
